--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -47,13 +47,28 @@ img{
     padding: 50px 0;
     height: auto;
 }
+/* active */
+.active{
+    border: 2px solid #FFFFFF;
+    border-radius: 33px;
+    padding: 10px 24px !important;
+    color: #fff;
+}
+/* line */
+.line{
+    background-color: #FFF6D4;
+    height: 100%;
+    border-radius: 50px;
+    padding: 10px;
+    box-shadow: 0 12px 0 0  #FFCA7B;;
+}
  /* button */
  .btn{
     background: #FF000A;
     filter: drop-shadow(0px 4px 8px rgba(165, 15, 15, 0.45));
     box-shadow: 0 6px 0 0 #BD000B;;
     border-radius: 16px;
-    width: 70%;
+    width: 50%;
     height: 50px;
     outline: none;
     border: none;
@@ -63,8 +78,9 @@ img{
     font-size: 28px;
     line-height: 41px;
     color: #FFFFFF;
-    margin-left: 70px;
+    /* margin-left: 70px; */
     margin-top: 22px;
+    width: 70%;
 }
 .btn-detail{
     margin-top: 24px;
@@ -77,5 +93,88 @@ img{
     justify-content: center;
     color: #FFFFFF;
 }
+.btn-payment{
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 41px;
+    color: #FFFFFF;
+    /* margin-left: 70px; */
+    margin-top: 22px;
+    width: 100%;
+}
+.btn-down, .btn-email{
+    width: 15%;
+    margin-top: 24px;
+    text-decoration: none;
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 26px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #FFFFFF;
+}
+.btn-down{
+    margin-right: 25px;
+}
+/*  */
+.previous{
+    background-color: #FFDE32;
+    color: black;
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    font-size: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 12px 0 0 #FFD27B;
+    border-radius: 12px;
+
+}
+.next {
+    background-color: #FFDE32;
+    color: black;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    font-size: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 12px 0 0 #FFD27B;
+    border-radius: 12px;
+  }
+  .calendar{
+    background-color: #FFDE32;
+    color: black;
+    position: absolute;
+    right: 10px;
+    top: 30%;
+    font-size: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 6px 0 0 #ffd27b;
+    border-radius: 12px;
+    border: none;
+  }
+  .calendar i{
+    color: #fff;
+  }
+.round {
+    width: 50px;
+    height: 50px;
+  }
+a {
+    text-decoration: none;
+    display: inline-block;
+    /* padding: 8px 16px; */
+}
+  
+/* a:hover {
+    opacity: 0.8;
+} */
+  
 
 
