--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -809,6 +809,57 @@
 
 }
 
+/* MODAL */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 40px;
+  border: 1px solid #888;
+  width: 30%;
+  border-radius: 25px;
+  position: relative;
+  top: 30%;
+}
+.modal-content p{
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  color: #23221F;
+  opacity: 0.7;
+}
+/* The Close Button */
+.close {
+  color: #FF8A00;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  top: -7px;
+  position: relative;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 
 
 
