--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -809,10 +809,11 @@
 
 }
 
+
 /* MODAL */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
+  /* display: none; */
+  position: fixed; 
   z-index: 1; /* Sit on top */
   padding-top: 100px; /* Location of the box */
   left: 0;
