--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -349,7 +349,7 @@
 
 .event_item{
   background: #FFFFFF;
-  box-shadow: 4px 4px 45px rgba(109, 46, 0, 0.35);
+  /* box-shadow: 4px 4px 45px rgba(109, 46, 0, 0.35); */
   border-radius: 20px;
   
 }
@@ -387,7 +387,7 @@
 .event_item--price span{
   color: #FA7D09;
   font-weight: 700;
-  font-size: 32px;
+  font-size: 28px;
   margin: 10px 0;
   line-height: 48px;
   letter-spacing: 0.005em;
@@ -399,9 +399,9 @@
 .event_image--item-1,
 .detailEvent_image--item-1{
   position: absolute;
-  width: 30%;
-  left: 1119.17px;
-  top: 14.35px;
+  width: 50%;
+  left: 79%;
+  top: -32%;
   transform: rotate(9.58deg);
 }
 .event_image--item-2,
@@ -409,15 +409,15 @@
   position: absolute;
   width: 100%;
   left: 0;
-  top: 70px;
+  top: 0px;
   z-index: 1;
 }
 .event_image--item-3,
 .detailEvent_image--item-3{
   position: absolute;
-  width: 30%;
-  left: -30px;
-  top: 70px;
+  width: 50%;
+  left: -29%;
+  top: -32%;
 }
 
 
@@ -608,6 +608,9 @@
   top: 6px;
   left: 9px;
 }
+.payment_detail--form{
+  padding: 85px 50px 50px 50px;
+}
 .payment_detail--form form{
   border: 3px dashed #FFB489;
   border-radius: 50px;
@@ -663,7 +666,7 @@
 
 .paymentSuccess_item{
   background: #FFFFFF;
-  box-shadow: 4px 4px 45px rgba(109, 46, 0, 0.35);
+  /* box-shadow: 4px 4px 45px rgba(109, 46, 0, 0.35); */
   border-radius: 20px;
   text-align: center;
 }
@@ -702,7 +705,7 @@
 }
 
 .paymentSuccess_tick{
-  font-size: 50px;
+  font-size: 30px;
   color: #fff;
   background: #44C4A1;
   border-radius: 50%;
@@ -716,6 +719,7 @@
   font-size: 20px;
   line-height: 30px;
   color: #23221F;
+  margin-left: 12px;
 }
 .paymentSuccess_btn{
   display: flex;
@@ -825,13 +829,19 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4);
 }
-
+.show{
+  display: block;
+}
+.hide{
+  display: none;
+}
 /* Modal Content */
 .modal-content {
   background-color: #fefefe;
+  /* display: none; */
   margin: auto;
   padding: 40px;
   border: 1px solid #888;
@@ -863,6 +873,73 @@
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+/* sideshow */
+
+img {
+  max-width: 100%;
+}
+.carousel-container {
+  width: 1100px;
+  margin: 50px auto;
+  position: relative;
+  z-index: 2;
+}
+@media (max-width: 768px) {
+  .carousel-container {
+    width: 95%;
+  }
+}
+.inner-carousel {
+  width: 100%;
+  /* height: 400px; */
+  overflow: hidden;
+}
+.track {
+  display: inline-flex;
+  height: 100%;
+  transition: transform 0.2s ease-in-out;
+}
+.card-container {
+  width: 275px;
+  /* height: 400px; */
+  flex-shrink: 0;
+  padding: 0 12px 0 12px;
+}
+.card-container:last-child(){
+  padding-right: 0px;
+
+}
+.card-container.event{
+  width: 312px !important;
+}
+@media (max-width: 768px) {
+  .card-container {
+    width: 184px;
+  }
+}
+.card {
+  width: 100%;
+  height: 100%;
+  background-position: center bottom;
+  background-size: center;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+}
+
+.nav .prev {
+  left: -60px;
+  display: none;
+}
+.nav .prev.show {
+  display: block;
+}
+.nav .next {
+  right: -60px;
+}
+.nav .next.hide {
+  display: none;
 }
 
 
